kubernetes/manifests/redis/templates/ciliumnetpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: block-untrusted-traffic
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: shlink
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
